parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     package_declaration -> PACKAGE IDENTIFIER
Rule 3     import_declaration -> IMPORT STRING_LIT
Rule 4     import_declaration -> IMPORT LPAREN import_spec_list RPAREN
Rule 5     import_spec_list -> import_spec
Rule 6     import_spec_list -> import_spec_list COMMA import_spec
Rule 7     import_spec -> STRING_LIT
Rule 8     import_spec -> IDENTIFIER STRING_LIT
Rule 9     function_declaration -> FUNC IDENTIFIER function_signature function_body
Rule 10    function_signature -> LPAREN parameter_list RPAREN
Rule 11    function_signature -> LPAREN RPAREN
Rule 12    parameter_list -> parameter_declaration
Rule 13    parameter_list -> parameter_list COMMA parameter_declaration
Rule 14    parameter_declaration -> IDENTIFIER type
Rule 15    type -> IDENTIFIER
Rule 16    type -> pointer_type
Rule 17    type -> array_type
Rule 18    pointer_type -> TIMES type
Rule 19    array_type -> LBRACK expression RBRACK type
Rule 20    function_body -> block
Rule 21    block -> LBRACE statement_list RBRACE
Rule 22    block -> LBRACE RBRACE
Rule 23    statement_list -> statement
Rule 24    statement_list -> statement_list statement
Rule 25    statement -> package_declaration import_declaration
Rule 26    statement -> const_declaration
Rule 27    statement -> var_declaration
Rule 28    statement -> simple_statement
Rule 29    statement -> return_statement
Rule 30    statement -> if_statement
Rule 31    statement -> for_statement
Rule 32    statement -> function_declaration
Rule 33    statement -> print_statement
Rule 34    simple_statement -> expression
Rule 35    return_statement -> RETURN expression
Rule 36    return_statement -> RETURN
Rule 37    if_statement -> IF expression LBRACE statement_list RBRACE
Rule 38    if_statement -> IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 39    for_statement -> FOR expression LBRACE statement_list RBRACE
Rule 40    print_statement -> FMT DOT PRINTLN LPAREN STRING_LIT RPAREN
Rule 41    print_statement -> PRINTLN LPAREN STRING_LIT RPAREN
Rule 42    const_declaration -> CONST IDENTIFIER ASSIGN expression
Rule 43    const_declaration -> CONST LPAREN const_spec_list RPAREN
Rule 44    const_spec -> IDENTIFIER ASSIGN expression
Rule 45    const_spec -> IDENTIFIER ASSIGN expression const_spec
Rule 46    const_spec_list -> const_spec
Rule 47    const_spec_list -> const_spec_list const_spec
Rule 48    var_declaration -> VAR var_spec
Rule 49    var_declaration -> VAR LPAREN var_spec_list RPAREN
Rule 50    var_spec -> IDENTIFIER type
Rule 51    var_spec -> IDENTIFIER type ASSIGN expression
Rule 52    var_spec -> IDENTIFIER type ASSIGN expression var_spec
Rule 53    var_spec_list -> var_spec
Rule 54    var_spec_list -> var_spec_list var_spec
Rule 55    expression -> IDENTIFIER
Rule 56    expression -> INT_LIT
Rule 57    expression -> FLOAT_LIT
Rule 58    expression -> IMAGINARY_LIT
Rule 59    expression -> RUNE_LIT
Rule 60    expression -> STRING_LIT
Rule 61    expression -> LPAREN expression RPAREN
Rule 62    expression -> expression PLUS expression
Rule 63    expression -> expression MINUS expression
Rule 64    expression -> expression TIMES expression
Rule 65    expression -> expression DIVIDE expression
Rule 66    expression -> expression MOD expression
Rule 67    expression -> expression AND expression
Rule 68    expression -> expression OR expression
Rule 69    expression -> expression XOR expression
Rule 70    expression -> expression LSHIFT expression
Rule 71    expression -> expression RSHIFT expression
Rule 72    expression -> expression AND_NOT expression
Rule 73    expression -> expression PLUS_ASSIGN expression
Rule 74    expression -> expression MINUS_ASSIGN expression
Rule 75    expression -> expression TIMES_ASSIGN expression
Rule 76    expression -> expression DIVIDE_ASSIGN expression
Rule 77    expression -> expression MOD_ASSIGN expression
Rule 78    expression -> expression AND_ASSIGN expression
Rule 79    expression -> expression OR_ASSIGN expression
Rule 80    expression -> expression XOR_ASSIGN expression
Rule 81    expression -> expression LSHIFT_ASSIGN expression
Rule 82    expression -> expression RSHIFT_ASSIGN expression
Rule 83    expression -> expression AND_NOT_ASSIGN expression
Rule 84    expression -> expression AND_AND expression
Rule 85    expression -> expression OR_OR expression
Rule 86    expression -> expression ARROW expression
Rule 87    expression -> expression EQL expression
Rule 88    expression -> expression NEQ expression
Rule 89    expression -> expression LSS expression
Rule 90    expression -> expression LEQ expression
Rule 91    expression -> expression GTR expression
Rule 92    expression -> expression GEQ expression
Rule 93    expression -> expression ASSIGN expression
Rule 94    expression -> expression DECLARE_ASSIGN expression
Rule 95    expression -> expression NOT expression
Rule 96    expression -> expression ELLIPSIS expression
Rule 97    expression -> expression LBRACK expression RBRACK
Rule 98    expression -> expression LBRACE expression RBRACE
Rule 99    expression -> expression COMMA expression
Rule 100   expression -> expression PERIOD expression
Rule 101   expression -> expression COLON expression
Rule 102   expression -> INC expression
Rule 103   expression -> DEC expression
Rule 104   expression -> NOT expression
Rule 105   empty_line -> <empty>

Terminals, with rules where they appear

AND                  : 67
AND_AND              : 84
AND_ASSIGN           : 78
AND_NOT              : 72
AND_NOT_ASSIGN       : 83
ARROW                : 86
ASSIGN               : 42 44 45 51 52 93
COLON                : 101
COMMA                : 6 13 99
CONST                : 42 43
DEC                  : 103
DECLARE_ASSIGN       : 94
DIVIDE               : 65
DIVIDE_ASSIGN        : 76
DOT                  : 40
ELLIPSIS             : 96
ELSE                 : 38
EQL                  : 87
FLOAT_LIT            : 57
FMT                  : 40
FOR                  : 39
FUNC                 : 9
GEQ                  : 92
GTR                  : 91
IDENTIFIER           : 2 8 9 14 15 42 44 45 50 51 52 55
IF                   : 37 38
IMAGINARY_LIT        : 58
IMPORT               : 3 4
INC                  : 102
INT_LIT              : 56
LBRACE               : 21 22 37 38 38 39 98
LBRACK               : 19 97
LEQ                  : 90
LPAREN               : 4 10 11 40 41 43 49 61
LSHIFT               : 70
LSHIFT_ASSIGN        : 81
LSS                  : 89
MINUS                : 63
MINUS_ASSIGN         : 74
MOD                  : 66
MOD_ASSIGN           : 77
NEQ                  : 88
NOT                  : 95 104
OR                   : 68
OR_ASSIGN            : 79
OR_OR                : 85
PACKAGE              : 2
PERIOD               : 100
PLUS                 : 62
PLUS_ASSIGN          : 73
PRINTLN              : 40 41
RBRACE               : 21 22 37 38 38 39 98
RBRACK               : 19 97
RETURN               : 35 36
RPAREN               : 4 10 11 40 41 43 49 61
RSHIFT               : 71
RSHIFT_ASSIGN        : 82
RUNE_LIT             : 59
STRING_LIT           : 3 7 8 40 41 60
TIMES                : 18 64
TIMES_ASSIGN         : 75
VAR                  : 48 49
XOR                  : 69
XOR_ASSIGN           : 80
error                : 

Nonterminals, with rules where they appear

array_type           : 17
block                : 20
const_declaration    : 26
const_spec           : 45 46 47
const_spec_list      : 43 47
empty_line           : 
expression           : 19 34 35 37 38 39 42 44 45 51 52 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 103 104
for_statement        : 31
function_body        : 9
function_declaration : 32
function_signature   : 9
if_statement         : 30
import_declaration   : 25
import_spec          : 5 6
import_spec_list     : 4 6
package_declaration  : 25
parameter_declaration : 12 13
parameter_list       : 10 13
pointer_type         : 16
print_statement      : 33
program              : 0
return_statement     : 29
simple_statement     : 28
statement            : 23 24
statement_list       : 1 21 24 37 38 38 39
type                 : 14 18 19 50 51 52
var_declaration      : 27
var_spec             : 48 52 53 54
var_spec_list        : 49 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (23) statement_list -> . statement
    (24) statement_list -> . statement_list statement
    (25) statement -> . package_declaration import_declaration
    (26) statement -> . const_declaration
    (27) statement -> . var_declaration
    (28) statement -> . simple_statement
    (29) statement -> . return_statement
    (30) statement -> . if_statement
    (31) statement -> . for_statement
    (32) statement -> . function_declaration
    (33) statement -> . print_statement
    (2) package_declaration -> . PACKAGE IDENTIFIER
    (42) const_declaration -> . CONST IDENTIFIER ASSIGN expression
    (43) const_declaration -> . CONST LPAREN const_spec_list RPAREN
    (48) var_declaration -> . VAR var_spec
    (49) var_declaration -> . VAR LPAREN var_spec_list RPAREN
    (34) simple_statement -> . expression
    (35) return_statement -> . RETURN expression
    (36) return_statement -> . RETURN
    (37) if_statement -> . IF expression LBRACE statement_list RBRACE
    (38) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (39) for_statement -> . FOR expression LBRACE statement_list RBRACE
    (9) function_declaration -> . FUNC IDENTIFIER function_signature function_body
    (40) print_statement -> . FMT DOT PRINTLN LPAREN STRING_LIT RPAREN
    (41) print_statement -> . PRINTLN LPAREN STRING_LIT RPAREN
    (55) expression -> . IDENTIFIER
    (56) expression -> . INT_LIT
    (57) expression -> . FLOAT_LIT
    (58) expression -> . IMAGINARY_LIT
    (59) expression -> . RUNE_LIT
    (60) expression -> . STRING_LIT
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression TIMES expression
    (65) expression -> . expression DIVIDE expression
    (66) expression -> . expression MOD expression
    (67) expression -> . expression AND expression
    (68) expression -> . expression OR expression
    (69) expression -> . expression XOR expression
    (70) expression -> . expression LSHIFT expression
    (71) expression -> . expression RSHIFT expression
    (72) expression -> . expression AND_NOT expression
    (73) expression -> . expression PLUS_ASSIGN expression
    (74) expression -> . expression MINUS_ASSIGN expression
    (75) expression -> . expression TIMES_ASSIGN expression
    (76) expression -> . expression DIVIDE_ASSIGN expression
    (77) expression -> . expression MOD_ASSIGN expression
    (78) expression -> . expression AND_ASSIGN expression
    (79) expression -> . expression OR_ASSIGN expression
    (80) expression -> . expression XOR_ASSIGN expression
    (81) expression -> . expression LSHIFT_ASSIGN expression
    (82) expression -> . expression RSHIFT_ASSIGN expression
    (83) expression -> . expression AND_NOT_ASSIGN expression
    (84) expression -> . expression AND_AND expression
    (85) expression -> . expression OR_OR expression
    (86) expression -> . expression ARROW expression
    (87) expression -> . expression EQL expression
    (88) expression -> . expression NEQ expression
    (89) expression -> . expression LSS expression
    (90) expression -> . expression LEQ expression
    (91) expression -> . expression GTR expression
    (92) expression -> . expression GEQ expression
    (93) expression -> . expression ASSIGN expression
    (94) expression -> . expression DECLARE_ASSIGN expression
    (95) expression -> . expression NOT expression
    (96) expression -> . expression ELLIPSIS expression
    (97) expression -> . expression LBRACK expression RBRACK
    (98) expression -> . expression LBRACE expression RBRACE
    (99) expression -> . expression COMMA expression
    (100) expression -> . expression PERIOD expression
    (101) expression -> . expression COLON expression
    (102) expression -> . INC expression
    (103) expression -> . DEC expression
    (104) expression -> . NOT expression

    PACKAGE         shift and go to state 13
    CONST           shift and go to state 15
    VAR             shift and go to state 18
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    FOR             shift and go to state 21
    FUNC            shift and go to state 22
    FMT             shift and go to state 23
    PRINTLN         shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INT_LIT         shift and go to state 26
    FLOAT_LIT       shift and go to state 27
    IMAGINARY_LIT   shift and go to state 28
    RUNE_LIT        shift and go to state 29
    STRING_LIT      shift and go to state 25
    LPAREN          shift and go to state 17
    INC             shift and go to state 31
    DEC             shift and go to state 32
    NOT             shift and go to state 30

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    package_declaration            shift and go to state 4
    const_declaration              shift and go to state 5
    var_declaration                shift and go to state 6
    simple_statement               shift and go to state 7
    return_statement               shift and go to state 8
    if_statement                   shift and go to state 9
    for_statement                  shift and go to state 10
    function_declaration           shift and go to state 11
    print_statement                shift and go to state 12
    expression                     shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (24) statement_list -> statement_list . statement
    (25) statement -> . package_declaration import_declaration
    (26) statement -> . const_declaration
    (27) statement -> . var_declaration
    (28) statement -> . simple_statement
    (29) statement -> . return_statement
    (30) statement -> . if_statement
    (31) statement -> . for_statement
    (32) statement -> . function_declaration
    (33) statement -> . print_statement
    (2) package_declaration -> . PACKAGE IDENTIFIER
    (42) const_declaration -> . CONST IDENTIFIER ASSIGN expression
    (43) const_declaration -> . CONST LPAREN const_spec_list RPAREN
    (48) var_declaration -> . VAR var_spec
    (49) var_declaration -> . VAR LPAREN var_spec_list RPAREN
    (34) simple_statement -> . expression
    (35) return_statement -> . RETURN expression
    (36) return_statement -> . RETURN
    (37) if_statement -> . IF expression LBRACE statement_list RBRACE
    (38) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (39) for_statement -> . FOR expression LBRACE statement_list RBRACE
    (9) function_declaration -> . FUNC IDENTIFIER function_signature function_body
    (40) print_statement -> . FMT DOT PRINTLN LPAREN STRING_LIT RPAREN
    (41) print_statement -> . PRINTLN LPAREN STRING_LIT RPAREN
    (55) expression -> . IDENTIFIER
    (56) expression -> . INT_LIT
    (57) expression -> . FLOAT_LIT
    (58) expression -> . IMAGINARY_LIT
    (59) expression -> . RUNE_LIT
    (60) expression -> . STRING_LIT
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression TIMES expression
    (65) expression -> . expression DIVIDE expression
    (66) expression -> . expression MOD expression
    (67) expression -> . expression AND expression
    (68) expression -> . expression OR expression
    (69) expression -> . expression XOR expression
    (70) expression -> . expression LSHIFT expression
    (71) expression -> . expression RSHIFT expression
    (72) expression -> . expression AND_NOT expression
    (73) expression -> . expression PLUS_ASSIGN expression
    (74) expression -> . expression MINUS_ASSIGN expression
    (75) expression -> . expression TIMES_ASSIGN expression
    (76) expression -> . expression DIVIDE_ASSIGN expression
    (77) expression -> . expression MOD_ASSIGN expression
    (78) expression -> . expression AND_ASSIGN expression
    (79) expression -> . expression OR_ASSIGN expression
    (80) expression -> . expression XOR_ASSIGN expression
    (81) expression -> . expression LSHIFT_ASSIGN expression
    (82) expression -> . expression RSHIFT_ASSIGN expression
    (83) expression -> . expression AND_NOT_ASSIGN expression
    (84) expression -> . expression AND_AND expression
    (85) expression -> . expression OR_OR expression
    (86) expression -> . expression ARROW expression
    (87) expression -> . expression EQL expression
    (88) expression -> . expression NEQ expression
    (89) expression -> . expression LSS expression
    (90) expression -> . expression LEQ expression
    (91) expression -> . expression GTR expression
    (92) expression -> . expression GEQ expression
    (93) expression -> . expression ASSIGN expression
    (94) expression -> . expression DECLARE_ASSIGN expression
    (95) expression -> . expression NOT expression
    (96) expression -> . expression ELLIPSIS expression
    (97) expression -> . expression LBRACK expression RBRACK
    (98) expression -> . expression LBRACE expression RBRACE
    (99) expression -> . expression COMMA expression
    (100) expression -> . expression PERIOD expression
    (101) expression -> . expression COLON expression
    (102) expression -> . INC expression
    (103) expression -> . DEC expression
    (104) expression -> . NOT expression

    $end            reduce using rule 1 (program -> statement_list .)
    PACKAGE         shift and go to state 13
    CONST           shift and go to state 15
    VAR             shift and go to state 18
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    FOR             shift and go to state 21
    FUNC            shift and go to state 22
    FMT             shift and go to state 23
    PRINTLN         shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INT_LIT         shift and go to state 26
    FLOAT_LIT       shift and go to state 27
    IMAGINARY_LIT   shift and go to state 28
    RUNE_LIT        shift and go to state 29
    STRING_LIT      shift and go to state 25
    LPAREN          shift and go to state 17
    INC             shift and go to state 31
    DEC             shift and go to state 32
    NOT             shift and go to state 30

    statement                      shift and go to state 33
    package_declaration            shift and go to state 4
    const_declaration              shift and go to state 5
    var_declaration                shift and go to state 6
    simple_statement               shift and go to state 7
    return_statement               shift and go to state 8
    if_statement                   shift and go to state 9
    for_statement                  shift and go to state 10
    function_declaration           shift and go to state 11
    print_statement                shift and go to state 12
    expression                     shift and go to state 16

state 3

    (23) statement_list -> statement .

    PACKAGE         reduce using rule 23 (statement_list -> statement .)
    CONST           reduce using rule 23 (statement_list -> statement .)
    VAR             reduce using rule 23 (statement_list -> statement .)
    RETURN          reduce using rule 23 (statement_list -> statement .)
    IF              reduce using rule 23 (statement_list -> statement .)
    FOR             reduce using rule 23 (statement_list -> statement .)
    FUNC            reduce using rule 23 (statement_list -> statement .)
    FMT             reduce using rule 23 (statement_list -> statement .)
    PRINTLN         reduce using rule 23 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 23 (statement_list -> statement .)
    INT_LIT         reduce using rule 23 (statement_list -> statement .)
    FLOAT_LIT       reduce using rule 23 (statement_list -> statement .)
    IMAGINARY_LIT   reduce using rule 23 (statement_list -> statement .)
    RUNE_LIT        reduce using rule 23 (statement_list -> statement .)
    STRING_LIT      reduce using rule 23 (statement_list -> statement .)
    LPAREN          reduce using rule 23 (statement_list -> statement .)
    INC             reduce using rule 23 (statement_list -> statement .)
    DEC             reduce using rule 23 (statement_list -> statement .)
    NOT             reduce using rule 23 (statement_list -> statement .)
    $end            reduce using rule 23 (statement_list -> statement .)
    RBRACE          reduce using rule 23 (statement_list -> statement .)


state 4

    (25) statement -> package_declaration . import_declaration
    (3) import_declaration -> . IMPORT STRING_LIT
    (4) import_declaration -> . IMPORT LPAREN import_spec_list RPAREN

    IMPORT          shift and go to state 35

    import_declaration             shift and go to state 34

state 5

    (26) statement -> const_declaration .

    PACKAGE         reduce using rule 26 (statement -> const_declaration .)
    CONST           reduce using rule 26 (statement -> const_declaration .)
    VAR             reduce using rule 26 (statement -> const_declaration .)
    RETURN          reduce using rule 26 (statement -> const_declaration .)
    IF              reduce using rule 26 (statement -> const_declaration .)
    FOR             reduce using rule 26 (statement -> const_declaration .)
    FUNC            reduce using rule 26 (statement -> const_declaration .)
    FMT             reduce using rule 26 (statement -> const_declaration .)
    PRINTLN         reduce using rule 26 (statement -> const_declaration .)
    IDENTIFIER      reduce using rule 26 (statement -> const_declaration .)
    INT_LIT         reduce using rule 26 (statement -> const_declaration .)
    FLOAT_LIT       reduce using rule 26 (statement -> const_declaration .)
    IMAGINARY_LIT   reduce using rule 26 (statement -> const_declaration .)
    RUNE_LIT        reduce using rule 26 (statement -> const_declaration .)
    STRING_LIT      reduce using rule 26 (statement -> const_declaration .)
    LPAREN          reduce using rule 26 (statement -> const_declaration .)
    INC             reduce using rule 26 (statement -> const_declaration .)
    DEC             reduce using rule 26 (statement -> const_declaration .)
    NOT             reduce using rule 26 (statement -> const_declaration .)
    $end            reduce using rule 26 (statement -> const_declaration .)
    RBRACE          reduce using rule 26 (statement -> const_declaration .)


state 6

    (27) statement -> var_declaration .

    PACKAGE         reduce using rule 27 (statement -> var_declaration .)
    CONST           reduce using rule 27 (statement -> var_declaration .)
    VAR             reduce using rule 27 (statement -> var_declaration .)
    RETURN          reduce using rule 27 (statement -> var_declaration .)
    IF              reduce using rule 27 (statement -> var_declaration .)
    FOR             reduce using rule 27 (statement -> var_declaration .)
    FUNC            reduce using rule 27 (statement -> var_declaration .)
    FMT             reduce using rule 27 (statement -> var_declaration .)
    PRINTLN         reduce using rule 27 (statement -> var_declaration .)
    IDENTIFIER      reduce using rule 27 (statement -> var_declaration .)
    INT_LIT         reduce using rule 27 (statement -> var_declaration .)
    FLOAT_LIT       reduce using rule 27 (statement -> var_declaration .)
    IMAGINARY_LIT   reduce using rule 27 (statement -> var_declaration .)
    RUNE_LIT        reduce using rule 27 (statement -> var_declaration .)
    STRING_LIT      reduce using rule 27 (statement -> var_declaration .)
    LPAREN          reduce using rule 27 (statement -> var_declaration .)
    INC             reduce using rule 27 (statement -> var_declaration .)
    DEC             reduce using rule 27 (statement -> var_declaration .)
    NOT             reduce using rule 27 (statement -> var_declaration .)
    $end            reduce using rule 27 (statement -> var_declaration .)
    RBRACE          reduce using rule 27 (statement -> var_declaration .)


state 7

    (28) statement -> simple_statement .
